# product_recommendation_with_agent

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yaml  ci.yaml  render-docker.yaml
src/: Dockerfile
src/project_folder/: Dockerfile  app.py  main.py  pyproject.toml  recommendation_agent.py  requirements.txt
src/project_folder/.streamlit/: secrets.toml
src/project_folder/config/: data_loader_conf.py  embeddings_conf.py  train_conf.py
src/project_folder/models/: scaler_pca_pipeline.pkl
src/project_folder/models/age/: best_model_CatBoost_age.pkl
src/project_folder/models/gender/: best_model_SVC_gender.pkl
src/project_folder/models/race/: best_model_SVC_race.pkl
src/project_folder/notebooks/: Retail_Recommendation.ipynb  age_estimation_with_eyes.ipynb  age_gender_identification.ipynb  age_prediction.ipynb  agentic_flow.ipynb  healthcare-11-00448.txt  image_encoding.py  new_age_emotion_detection.ipynb
src/project_folder/scripts/: data_loader.py  embeddings.py  train_model.py
