[project]
name = "age-gender-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "3.11.14"
dependencies = [
    "argparse>=1.4.0",
    "ddgs>=9.10.0",
    "duckdb>=1.4.3",
    "fireducks>=1.4.4",
    "joblib>=1.5.3",
    "keras-facenet>=0.3.2",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pycountry>=24.6.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "streamlit>=1.52.2",
    "streamlit-product-card>=1.0.0",
    "tavily>=1.1.0",
    "tqdm>=4.67.1",
    "uuid>=1.30",
]

[FORMAT]
max-line-length=120
